--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@sendgrid/mail": "^7.4.7",
         "css-loader": "5.2.6",
+        "flickity": "^2.3.0",
         "formik": "^2.2.9",
         "framer-motion": "^4.1.17",
         "locomotive-scroll": "^4.1.2",
@@ -21,8 +22,10 @@
         "next-seo": "^4.28.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
+        "react-flickity-component": "^3.6.2",
         "react-locomotive-scroll": "^0.2.0",
         "react-marquee-slider": "^1.1.5",
+        "react-masonry-css": "^1.0.16",
         "react-ticker": "^1.3.1",
         "sass-loader": "10.1.1",
         "style-loader": "2.0.0",
