--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
         "build-storybook": "build-storybook"
     },
     "dependencies": {
+        "@moxy/react-split-text": "^1.0.1",
         "@sendgrid/mail": "^7.4.7",
         "css-loader": "5.2.6",
         "flickity": "^2.3.0",
         "formik": "^2.2.9",
         "framer-motion": "^4.1.17",
-        "locomotive-scroll": "^4.1.2",
+        "locomotive-scroll": "^4.1.4",
         "lodash": "^4.17.21",
         "next": "11.1.2",
         "next-seo": "^4.28.1",
