--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-flickity-component": "^3.6.2",
+        "react-intersection-observer": "^8.33.1",
         "react-locomotive-scroll": "^0.2.0",
         "react-marquee-slider": "^1.1.5",
         "react-masonry-css": "^1.0.16",
